# Software_Unit_Validation

./: GenCoverage.txt  GenLib.txt  LICENSE  README.md  UserTypeArray.py  filter_coverage.py  helper_my_model.py  input_my_model.py  interface_my_model.py  my_model.slx  test_REQ.py
c2py/: MyStruct.h  MyStruct2.h  c2py.py
interfaces/: inpStr.py
my_model_ert_rtw/: CMakeLists.txt  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  ert_main.c  my_model.bat  my_model.c  my_model.h  my_model_private.h  my_model_types.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
my_model_ert_rtw/export/: my_model.cmake  my_modelTargets-release.cmake
my_model_ert_rtw/tmwinternal/: simulink_cache.xml  tr
tests/test_REQ001/: input_my_model.py  keywords_my_model.resource  testSuite_my_model.robot
